--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -139,7 +139,10 @@
       </div>
       <!-- ----------------------------- -->
       <div class="value-scale">
-        <div class="value-scale__conteiner-scale">
+        <div
+          class="value-scale__conteiner-scale"
+          [ngClass]="!flagValueScale ? 'color-disable' : ''"
+        >
           De
           <div class="value-scale__value">
             <mat-select
@@ -182,7 +185,12 @@
         <!-- Etiquetas de escala de valor--------------------------- -->
         <div class="value-scale__conteiner-tags">
           <div class="value-scale__tag">
-            <label class="value-scale__label" for="">{{ firstValue }}</label>
+            <label
+              class="value-scale__label"
+              [ngClass]="!flagValueScale ? 'color-disable' : ''"
+              for=""
+              >{{ firstValue }}</label
+            >
             <mat-form-field class="value-scale__input" appearance="fill">
               <input
                 color="accent"
@@ -201,7 +209,12 @@
             </mat-form-field>
           </div>
           <div class="value-scale__tag">
-            <label class="value-scale__label" for="">{{ lastValue }}</label>
+            <label
+              class="value-scale__label"
+              [ngClass]="!flagValueScale ? 'color-disable' : ''"
+              for=""
+              >{{ lastValue }}</label
+            >
             <mat-form-field class="value-scale__input" appearance="fill">
               <input
                 color="accent"
