--- a/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
+++ b/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
@@ -2,15 +2,7 @@
     <div class="add-mod-report">
         <h1 class="title">Crear Nuevo Reporte</h1>
         <form class="form-create-report">
-            <div class="container-button-expand">
-                <a style="cursor: pointer;" class="button-expand">
-                    <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 4px;" width="24" height="24"
-                        fill="currentColor" class="bi bi-arrows-angle-expand" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707z" />
-                    </svg>
-                </a>
-            </div>
+
             <section>
                 <label>Nombre/Numero</label>
                 <br>
@@ -24,6 +16,15 @@
                     <mat-option value="Hogar san jose">Hogar san jose</mat-option>
                     <mat-option value="Casa matriz">Casa matriz</mat-option>
                 </mat-select>
+                <div class="container-button-expand">
+                    <a style="cursor: pointer;" class="button-expand">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 20px;" width="24" height="24"
+                            fill="currentColor" class="bi bi-arrows-angle-expand" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707z" />
+                        </svg>
+                    </a>
+                </div>
             </section>
             <section>
                 <label>Periodo a reportar</label>
@@ -46,30 +47,39 @@
                     </div>
                 </div>
             </section>
-            <section style="margin-top:49px;">
+            <section style="margin-top:49px;" id="select" >
                 <label style="margin-right: 420px;">Eje</label>
                 <label>Variable</label>
-                <div class="container-ejes">
-                    <mat-select class="mat-select-ejes" placeholder="Selecciona un Eje de Variables">
+                <div class="container-ejes" id="select-ejes">
+                    <mat-select class="mat-select-ejes" placeholder="Selecciona un Eje de Variables" [(value)]="eje"
+                        name="eje" (selectionChange)="capturarEje($event.value)">
                         <mat-option value="ACOMPAÑAMIENTO EDUCATIVO">ACOMPAÑAMIENTO EDUCATIVO</mat-option>
                         <mat-option value="ACOMPAÑAMIENTO EN SALUD">ACOMPAÑAMIENTO EN SALUD</mat-option>
                         <mat-option value="TALLER 2">TALLER 2</mat-option>
                     </mat-select>
-                    <mat-select class="mat-select-ejes" placeholder="Selecciona una o más." multiple=""
-                        [(value)]="variables" name="variables" (selectionChange)="capturarVariables($event.value)">
+                    <mat-select [disabled]="!eje" class="mat-select-ejes" placeholder="Selecciona una o más."
+                        multiple="" [(value)]="variables" name="variables"
+                        (selectionChange)="capturarVariables($event.value)">
                         <mat-option [value]="'ACOMPAÑAMIENTO EDUCATIVO'">ACOMPAÑAMIENTO EDUCATIVO</mat-option>
                         <mat-option [value]="'ACOMPAÑAMIENTO EN SALUD'">ACOMPAÑAMIENTO EN SALUD</mat-option>
                         <mat-option [value]="'TALLER 2'">TALLER 2</mat-option>
                     </mat-select>
                 </div>
-                <button mat-button class="button-ejes">+ Eje</button>
-            </section>
-            <div class="container-label-variables">
-                <div>
-                    <label class="label-variables" *ngFor="let item of variables">{{item}}<a><mat-icon>cancel</mat-icon></a>
-                    </label>
+                <div class="container-label-variables">
+                    <div>
+                        <div>
+                            <label>Variables Seleccionadas </label>
+                        </div>
+                        <label class="label-variables" *ngFor="let item of variables">{{item}}<a
+                                style="cursor: pointer; margin-top: 5px;" (click)="removeVariable(item)">
+                                <mat-icon>cancel</mat-icon>
+                            </a>
+                        </label>
+                    </div>
                 </div>
-            </div>
+
+            </section>
+            <button mat-button class="button-ejes" (click)="createEje()">+ Eje</button>
             <div class="container-alert">
                 <Label>Fecha de Entrega(Alerta)</Label>
                 <div class="input-wrapper">
