--- a/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.scss
+++ b/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.scss
@@ -11,21 +11,30 @@
         width: 100%;
         max-width: 71.0625em;
         margin: 0 7.9375em;
+        font-family: 'Futura Bk BT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+
 
         .container-button-expand {
             display: flex;
+            align-items: flex-end;
             flex-direction: column;
-            align-items: end;
-
             .button-expand {
+                margin-right: 70px;
+                position: absolute;
                 box-sizing: border-box;
-                width: 50px;
-                height: 35px;
-                background: #92CDEF;
-                border: 1px solid #083D5E;
+                width: 84px;
+                top: 170px;
+                height: 66px;
+                background: #B0DBF3;
+                border: 1px solid #B0DBF3;
                 border-radius: 80px;
                 align-items: center;
                 text-align: center;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             }
         }
 
@@ -159,16 +168,17 @@
                 box-sizing: border-box;
                 width: 116px;
                 height: 67px;
-                background: #D9D9D9;
-                border: 1px solid #1967D2;
+                background: #B0DBF3;
+                border: 1px solid #B0DBF3;
                 border-radius: 80px;
                 font-family: 'Futura Bk BT';
                 font-style: normal;
-                font-weight: 400;
+                font-weight: 600;
                 font-size: 20px;
                 line-height: 24px;
                 margin-left: 208px;
                 color: #000000;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             }
 
             .div-button {
@@ -183,7 +193,8 @@
                 gap: 10px;
                 width: 193px;
                 height: 66px;
-                background: #92CDEF;
+                background: #56B5EC;
+                border: 1px solid #56B5EC;
                 border-radius: 35px;
                 font-family: 'Futura Bk BT';
                 font-style: normal;
@@ -191,6 +202,7 @@
                 font-size: 20px;
                 line-height: 24px;
                 color: #000000;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             }
         }
 
@@ -198,6 +210,7 @@
             display: flex;
             flex-direction: row;
             align-items: flex-start;
+            margin-left: 450px;
 
             .label-variables {
                 padding: 4px;
@@ -315,10 +328,14 @@ mat-option {
 
 }
 
+::ng-deep .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
+    background: white;
+}
+
 ::ng-deep {
 
     .mat-option:hover {
-        background: #becce2 !important;
+        background: #a8c2eb !important;
         border-bottom: #1967D2;
         ;
     }
@@ -344,3 +361,23 @@ mat-option {
 }
 
 // fin css select
+
+.label-variables {
+    padding: 4px;
+    margin-top: 10px;
+    height: 30px;
+    margin-bottom: 10px;
+    background: rgba(33, 33, 33, 0.08);
+    border-radius: 16px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    align-items: center;
+    text-align: center;
+    display: inline-flex;
+    margin-right: 10px;
+    color: rgba(0, 0, 0, 0.87);
+}
