Feat: agrega componente confirm out modal en html
modal de advertencia al cambiar de pagina

--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -283,4 +283,8 @@
       <p class="modal__text">El eje ya existe en el sistema</p>
     </div>
   </div>
+  <app-confirm-out-modal
+    [show]="showDialog"
+    (selection)="onSelection($event)"
+  ></app-confirm-out-modal>
 </section>
