--- a/src/app/modules/admin/components/confirm-out-modal/confirm-out-modal.component.scss
+++ b/src/app/modules/admin/components/confirm-out-modal/confirm-out-modal.component.scss
@@ -1,83 +1,97 @@
 @import "../../../../../styles/variables.scss";
-.modal-confirm-out {
+.modal-conteiner {
+  top: 0;
+  right: 0;
   position: fixed;
-  left: calc(50% - 263px + 62px);
-  top: 310px;
+  height: 100vh;
+  width: 100vw;
   z-index: 1100;
-  width: 525px;
-  height: 297px;
-  background: #f9f4d6;
-  border: 1px solid #f8f2d8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  padding-bottom: 21px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  .modal__container-confirm-out {
-    width: 450px;
+  background-color: #2c2c2c2a;
+  .modal-confirm-out {
+    position: fixed;
+    left: calc(50% - 263px + 62px);
+    top: 310px;
+    z-index: 1110;
+    width: 525px;
+    height: 297px;
+    background: #fdff9a;
+    border: 1px solid rgba(253, 255, 154, 0.98);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding-bottom: 21px;
     display: flex;
-    margin-top: 55px;
+    flex-direction: column;
     align-items: center;
-    .modal__ico-info {
-      width: 80px;
-      height: 82px;
-    }
-    .modal__text {
-      font-size: 24px;
-      text-align: center;
-      letter-spacing: 0.2496px;
-      color: #a06b15;
-      margin-bottom: 0;
-      margin-left: 15px;
-      line-height: 40px;
-      .modal__spanFont {
-        font-family: "Roboto";
+    justify-content: space-between;
+    .modal__container-confirm-out {
+      width: 450px;
+      display: flex;
+      margin-top: 55px;
+      align-items: center;
+      .modal__ico-info {
+        width: 80px;
+        height: 82px;
+      }
+      .modal__text {
+        font-size: 24px;
+        text-align: center;
+        letter-spacing: 0.2496px;
+        color: #a06b15;
+        margin-bottom: 0;
+        margin-left: 15px;
+        line-height: 40px;
+        .modal__spanFont {
+          font-family: "Roboto";
+        }
       }
     }
-  }
-  .modal__options {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 95px;
-    padding-right: 29px;
-    .btn-modal__cancel {
-      width: 168px;
-      height: 59px;
-      background: #ffffff;
-      color: #083d5e;
-      border: 1px solid #083d5e;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 35px;
-      font-size: 20px;
-      transition: $transition;
-      cursor: pointer;
-    }
-    .btn-modal__accept {
-      width: 168px;
-      height: 59px;
-      color: #e60d0d;
-      background: #ffffff;
-      border: 1px solid #c70f0f;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 35px;
-      font-size: 20px;
-      padding: 0 20px;
-      transition: $transition;
-      cursor: pointer;
+    .modal__options {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding-left: 95px;
+      padding-right: 29px;
+      .btn-modal__cancel {
+        width: 168px;
+        height: 59px;
+        background: #ffffff;
+        color: #083d5e;
+        border: 1px solid #083d5e;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 35px;
+        font-size: 20px;
+        transition: $transition;
+        cursor: pointer;
+      }
+      .btn-modal__accept {
+        width: 168px;
+        height: 59px;
+        color: #e60d0d;
+        background: #ffffff;
+        border: 1px solid #c70f0f;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 35px;
+        font-size: 20px;
+        padding: 0 20px;
+        transition: $transition;
+        cursor: pointer;
+      }
     }
   }
 }
 @media (max-width: 87.5rem) {
-  .modal-confirm-out {
-    top: 13.875rem;
+  .modal-conteiner {
+    .modal-confirm-out {
+      top: 13.875rem;
+      left: calc(50% - 263px + 52px);
+    }
   }
 }
 
 @media (max-width: 48rem) {
-  .modal-confirm-out {
-    top: 12.5rem;
+  .modal-conteiner {
+    .modal-confirm-out {
+      top: 12.5rem;
+    }
   }
 }
