--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -1,4 +1,13 @@
 @import "../../../../../styles/variables.scss";
+.modal-conteiner {
+  top: 0;
+  right: 0;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1100;
+  background-color: #2c2c2c2a;
+}
 .navbar {
   font-size: 16px;
   width: 15.3125em;
