--- a/src/app/modules/admin/containers/variables/variables.component.html
+++ b/src/app/modules/admin/containers/variables/variables.component.html
@@ -42,14 +42,14 @@
         <div
           class="list-variables__row list-variables__row--click"
           *ngFor="let element of listOfVariables_toShow | async"
-          [routerLink]="['variables-agrupadas/', '2']"
+          [routerLink]="['variables-agrupadas/', element.id.toString()]"
         >
           <!-- [routerLink]="['variables-agrupadas/', element.id.toString()]" -->
           <p class="list-variables__cell list-variables__cell--axe">
             {{ element.nombre }}
           </p>
           <p class="list-variables__cell--quantity">
-            {{ element.id }}
+            {{ element.cantidad }}
           </p>
           <div class="list-variables__cell--action">
             <svg
@@ -158,26 +158,6 @@
       <p class="modal__text">
         ¡El Eje {{ newOrEditedVariable.nombre }} fue editado con éxito!
       </p>
-    </div>
-  </div>
-
-  <div *ngIf="flagDelete" class="modal-delete">
-    <div class="modal__container-delete">
-      <img
-        class="modal__ico-info"
-        src="../../../../../assets/icons/Exclamation-triangle.svg"
-        alt="Icono de información"
-      />
-      <p class="modal__text">
-        ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
-        revertida
-      </p>
-    </div>
-    <div class="modal__options">
-      <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
-      <button class="btn-modal__accept" (click)="deleteVariable(idToDelete)">
-        Confirmar y eliminar
-      </button>
     </div>
   </div>
 </section>
