Feat: faltaba datos de formulario en metodo click

--- a/src/app/modules/admin/containers/add-mod-center/add-mod-center.component.html
+++ b/src/app/modules/admin/containers/add-mod-center/add-mod-center.component.html
@@ -48,7 +48,7 @@
       [disabled]="formUpEdit.invalid"
       mat-button
       *ngIf="!data.editar"
-      (click)="confirm()"
+      (click)="confirm(formUpEdit.value)"
     >
       Confirmar
     </button>
