Feat: implementa endpoint de crear variable

--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -36,7 +36,7 @@
         <input
           [ngClass]="invalidForm ? 'add-variable__input--alert' : ''"
           class="add-variable__input"
-          formControlName="variable"
+          formControlName="nombre"
           id="POST-variable"
           type="text"
           name="variable"
@@ -56,7 +56,7 @@
       <div class="add-variable__container-input">
         <input
           class="add-variable__input"
-          formControlName="descriptionForm"
+          formControlName="descripcion"
           id="description"
           type="text"
           name="description"
@@ -76,7 +76,7 @@
           name="select-axe"
           (selectionChange)="captureAxe($event.value)"
           id="select-axe"
-          formControlName="selectAxeForm"
+          formControlName="eje"
         >
           <mat-option
             class="select__option"
@@ -100,7 +100,7 @@
           id="select-type-of-answer"
           class="radio-groupAM"
           [(ngModel)]="typeAnswer"
-          formControlName="typeAnswerForm"
+          formControlName="tipo"
           [ngModel]="typeAnswer"
           (change)="onSelectionChange()"
         >
@@ -127,7 +127,7 @@
           class="checkbox-add-to"
           color="accent"
           [(ngModel)]="addGenre"
-          formControlName="genreForm"
+          formControlName="genero"
           [disabled]="!flagGenre"
           >Distinción de género</mat-checkbox
         >
@@ -142,7 +142,7 @@
           class="checkbox-add-to"
           color="accent"
           [(ngModel)]="addValueEscale"
-          formControlName="valueScaleForm"
+          formControlName="escala_valor"
           [disabled]="flagGenre"
           (change)="onSelectValueScale()"
           >Escala de Valor</mat-checkbox
@@ -165,7 +165,7 @@
               [(value)]="firstValue"
               name="select-first-value"
               (selectionChange)="captureFirstValue($event.value)"
-              formControlName="firstNumberForm"
+              formControlName="valor_inicial"
               id="select-first-value"
               [disabled]="!flagValueScale"
             >
@@ -185,7 +185,7 @@
               name="select-last-value"
               (selectionChange)="captureLastValue($event.value)"
               id="select-last-value"
-              formControlName="lastNumberForm"
+              formControlName="valor_final"
               [disabled]="!flagValueScale"
             >
               <mat-option
@@ -212,12 +212,14 @@
                 autocomplete="off"
                 type="text"
                 matInput
-                formControlName="firstValueForm"
+                formControlName="etiqueta_inicial"
                 placeholder="Etiqueta"
                 required
               />
               <mat-error
-                *ngIf="newVariable.get('firstValueForm')?.hasError('required')"
+                *ngIf="
+                  newVariable.get('etiqueta_inicial')?.hasError('required')
+                "
               >
                 Debe completar este campo
               </mat-error>
@@ -236,12 +238,12 @@
                 autocomplete="off"
                 type="text"
                 matInput
-                formControlName="lastValueForm"
+                formControlName="etiqueta_final"
                 placeholder="Etiqueta"
                 required
               />
               <mat-error
-                *ngIf="newVariable.get('lastValueForm')?.hasError('required')"
+                *ngIf="newVariable.get('etiqueta_final')?.hasError('required')"
               >
                 Debe completar este campo
               </mat-error>
