Refactor: Cambia routerLink en btn agregar variable
Ya que debe volver atras en la ruta para ingresar en la ruta de agregar modificar variables

--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -2,7 +2,7 @@
   <div class="variables">
     <h1 class="variables__title">Variables</h1>
     <div class="variables__container-search">
-      <a class="btn-add-variables" routerLink="add-mod-variables">
+      <a class="btn-add-variables" routerLink="../../add-mod-variables">
         <img
           class="btn-add-variables__ico"
           src="../../../../../assets/icons/Grid.svg"
