Feat: agrega mat icon aler

--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -20,7 +20,7 @@
                 <p class="label-centros" *ngFor="let item of centros">{{item}}</p>
             </div>
             <div class="fecha-entrega" >
-                <label>Fecha de Entrega (Alerta)</label>
+                <label style="display: flex; margin-top: 4px;">Fecha de Entrega (Alerta) <mat-icon style="color:#FFBD12 ; font-size: 16px ;">notification_important</mat-icon></label>
                 <p>02/01/2023</p>
             </div>
         </section>
