--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -103,6 +103,16 @@
                 flex-direction: column;
                 align-items: center;
                 margin-bottom: 22px;
+
+                p {
+                    font-family: 'Futura Bk BT';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 17px;
+                    text-align: center;
+                    color: #083D5E;
+                }
             }
 
             p {
