Feat: Agrega tipos distincion de genero y escala de valor en columna central
para mejor visualizacion del tipo de variable creada

--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -53,6 +53,12 @@
           </p>
           <p class="list-variables__cell--type">
             {{ element.tipo }}
+            <ng-container *ngIf="element.genero == 'true'">
+              - Distinción de género
+            </ng-container>
+            <ng-container *ngIf="element.escala_valor == 'true'">
+              - Escala de Valor
+            </ng-container>
           </p>
           <div class="list-variable__cell list-variables__cell--acction">
             <a [routerLink]="['agregar-eje/', element.id.toString()]">
