Style: Centra texto en columna central

--- a/src/app/modules/admin/containers/variables-group/variables-group.component.scss
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.scss
@@ -137,6 +137,7 @@ p {
             align-items: center;
             transition: all 0.1s linear;
             padding-right: 175px;
+            text-align: center;
           }
           .list-variables__cell--action {
             padding-right: 20px;
