--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -32,8 +32,10 @@
                 </div>
             </div>
         </section>
-        <section>
-
+        <section style="border-top: 2px solid  #D9D9D9; margin-top: 20px ;">
+            <div class="buttons">
+                <button class="button" mat-button>Enviar</button> <button class="button" mat-button>Cerrar</button>
+            </div>
         </section>
     </div>
 </div>
