--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -71,6 +71,9 @@
 
                     color: #083D5E;
                 }
+                p{
+                    margin: 0px;
+                }
             }
         }
 
@@ -179,6 +182,23 @@
             }
         }
 
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            align-items: flex-end;
+            padding: 10px;
+            gap: 10px;
+
+            .button {
+                width: 108px;
+                height: 59px;
+                background: #92CDEF;
+                border-radius: 35px;
+                margin-top: 23.5px;
+                font-weight: 600;
+            }
+        }
 
     }
 
