Feat: Agrega nombre de eje elegido en subtitulo de variables agrupadas

--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -27,7 +27,7 @@
         />
       </label>
     </div>
-    <h2 class="variables__subtitle">Eje Salud</h2>
+    <h2 class="variables__subtitle">Eje {{ nameAxeGroup }}</h2>
     <section class="list-variables">
       <div class="list-variables__table">
         <!-- Position Column -->
@@ -137,7 +137,7 @@
         alt="icon check"
       />
       <p class="modal__text">
-        ¡El Eje {{ newOrEditedVariable.nombre }} fue creado con éxito!
+        ¡La Variable {{ newOrEditedVariable.nombre }} fue creada con éxito!
       </p>
     </div>
   </div>
@@ -156,7 +156,7 @@
         alt="icon check"
       />
       <p class="modal__text">
-        ¡El Eje {{ newOrEditedVariable.nombre }} fue editado con éxito!
+        ¡La Variable {{ newOrEditedVariable.nombre }} fue editada con éxito!
       </p>
     </div>
   </div>
