--- a/src/app/modules/admin/containers/variables/variables.component.html
+++ b/src/app/modules/admin/containers/variables/variables.component.html
@@ -42,9 +42,9 @@
         <div
           class="list-variables__row list-variables__row--click"
           *ngFor="let element of listOfVariables_toShow | async"
+          (click)="setNameAxeLocalStorage(element.nombre)"
           [routerLink]="['variables-agrupadas/', element.id.toString()]"
         >
-          <!-- [routerLink]="['variables-agrupadas/', element.id.toString()]" -->
           <p class="list-variables__cell list-variables__cell--axe">
             {{ element.nombre }}
           </p>
