--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -1,5 +1,5 @@
-<div class="container-preview">
-    <div>
+<div class="container-preview " [ngClass]="{'modal' : newname}">
+    <div *ngIf="!newname">
         <h1>Previsualización de Reporte Creado</h1>
     </div>
     <div class="container-preview-reporte">
@@ -34,8 +34,11 @@
         </section>
         <section style="border-top: 2px solid  #D9D9D9; margin-top: 20px ;">
             <div class="buttons">
-                <button class="button" mat-button>Enviar</button> <button class="button" mat-button>Cerrar</button>
+                <button class="button" mat-button>Enviar</button> <button (click)="cancel()" class="button" mat-button>Cerrar</button>
             </div>
         </section>
     </div>
+    
 </div>
+
+<div *ngIf="newname" class="overlay"  ></div>
