Refactor: Cambia ruterLink de editar para redireccionar a add-mod-variable con el id de variable en ruta

--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -61,11 +61,9 @@
             </ng-container>
           </p>
           <div class="list-variable__cell list-variables__cell--acction">
-            <a [routerLink]="['agregar-eje/', element.id.toString()]">
+            <a [routerLink]="['add-mod-variables/', element.id.toString()]">
               <img
-                class="
-                  list-variables__ico-action list-variables__ico-action--edit
-                "
+                class="list-variables__ico-action list-variables__ico-action--edit"
                 src="../../../../../assets/icons/Pencil.svg"
                 alt="Icono de editar"
                 matTooltip="Editar"
