Feat: agrega ngModel a etiqueta final e inicial
Para completar input al iniciar componente si la variable se esta editando

--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -213,6 +213,7 @@
                 type="text"
                 matInput
                 formControlName="etiqueta_inicial"
+                [(ngModel)]="etiquetaInicial"
                 placeholder="Etiqueta"
                 required
               />
@@ -239,6 +240,7 @@
                 type="text"
                 matInput
                 formControlName="etiqueta_final"
+                [(ngModel)]="etiquetaFinal"
                 placeholder="Etiqueta"
                 required
               />
