--- a/src/app/modules/admin/containers/variables-group/variables-group.component.scss
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.scss
@@ -93,7 +93,7 @@ p {
 
         .list-variables__row {
           box-shadow: 0 2px 2px #00000040;
-          height: 56px;
+          min-height: 56px;
           padding-top: 8px;
           padding-left: 1.5em;
           display: flex;
@@ -126,7 +126,9 @@ p {
               padding-left: 1.5em;
             }
           }
-
+          .list-variables__cell--variable {
+            width: 300px;
+          }
           .list-variables__cell--type {
             font-family: "Inter" !important;
             font-size: 1em;
