--- a/src/app/modules/admin/containers/reports/reports.component.scss
+++ b/src/app/modules/admin/containers/reports/reports.component.scss
@@ -219,7 +219,7 @@
             text-align: center;
             letter-spacing: 0.25px;
             color: #154520;
-            padding-top: 40px;
+            // padding-top: 40px;
             margin-bottom: 0;
             margin-left: 15px;
         }
