Refactor: quita disable de boton crear reporte
solo momentaneo

--- a/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
+++ b/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="div-button ">
-                <button mat-stroked-button class="button-create" [disabled]="formAdd.invalid" (click)="confirm()">Crear Reporte</button>
+                <button mat-stroked-button class="button-create"  (click)="confirm()">Crear Reporte</button>
             </div>
         </form>
     </div>
