--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -19,8 +19,9 @@
                 <p>Centros Alcanzados:</p>
                 <p class="label-centros" *ngFor="let item of centros">{{item}}</p>
             </div>
-            <div class="fecha-entrega" >
-                <label style="display: flex; margin-top: 4px;">Fecha de Entrega (Alerta) <mat-icon style="color:#FFBD12 ; font-size: 16px ;">notification_important</mat-icon></label>
+            <div class="fecha-entrega">
+                <label style="display: flex; margin-top: 4px;">Fecha de Entrega (Alerta) <mat-icon
+                        style="color:#FFBD12 ; font-size: 16px ;">notification_important</mat-icon></label>
                 <p>02/01/2023</p>
             </div>
         </section>
@@ -34,11 +35,22 @@
         </section>
         <section style="border-top: 2px solid  #D9D9D9; margin-top: 20px ;">
             <div class="buttons">
-                <button class="button" mat-button>Enviar</button> <button (click)="cancel()" class="button" mat-button>Cerrar</button>
+                <button class="button" mat-button (click)="confirm()">Enviar</button> 
+                <button *ngIf="newname" (click)="cancel()" class="button"mat-button>Cerrar</button>
+                <button *ngIf="!newname" (click)="backAddReport()" class="button"mat-button>Cerrar</button>
             </div>
         </section>
     </div>
-    
+    <div *ngIf="flag" class="modal-2">
+        <label>Confirmar envio</label>
+        <p>Centro la balsa</p>
+        <label class="label" type="text" disabled>gonzalogonzalez@mdp.com</label>
+        <p>H.San jose</p>
+        <label class="label" type="text" disabled>gonzalogonzalez@mdp.com</label>
+        <button mat-button (click)="enviar()">Confirmar</button>
+    </div>
+    <div *ngIf="flag" class="overlay"></div>
+
 </div>
 
-<div *ngIf="newname" class="overlay"  ></div>
+<div *ngIf="newname" class="overlay"></div>
