--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -71,7 +71,8 @@
 
                     color: #083D5E;
                 }
-                p{
+
+                p {
                     margin: 0px;
                 }
             }
@@ -202,6 +203,70 @@
 
     }
 
+    .modal-2 {
+        box-sizing: border-box;
+        font-family: 'Futura Bk BT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 40px;
+        text-align: center;
+        letter-spacing: 0.25px;
+        color: #000000;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 24px 21px;
+        gap: 24px;
+        z-index: 1001;
+        position: absolute;
+        width: 406px;
+        height: 442px;
+        top: 20%;
+        background: #FFFFFF;
+        border: 1px solid #79747E;
+
+        .label {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            padding: 9px 39px;
+            gap: 10px;
+            width: 318px;
+            height: 40px;
+            box-shadow: 0px 4px 4px 0px #00000040;
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 22px;
+            color: #979797;
+            background: rgba(217, 217, 217, 0.61);
+            border-radius: 10px;
+        }
+
+        button {
+            gap: 10px;
+            width: 143px;
+            height: 61px;
+            font-size: 20px;
+            background: #92CDEF;
+            border-radius: 35px;
+            border: none;
+        }
+    }
+
+    .overlay2 {
+        position: fixed;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+        width: 9999px;
+        height: 9999px;
+        opacity: 0.2;
+        background-color: black;
+    }
+
 
 }
 
@@ -211,7 +276,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 1001;
-    box-shadow: rgba(0,0,0,0.4) 10px 10px 4px;
+    box-shadow: rgba(0, 0, 0, 0.4) 10px 10px 4px;
     background: white;
     width: 842px;
     height: 96%;
