Feat: Agrega titulo editar variable
con ngIf si idVariable que se obtiene de ruta es distinto de cero renderiza editar variable sino crear variable

--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -1,5 +1,13 @@
 <section class="container-add-variable" (click)="close()">
-  <h1 class="container-add-variable__title">Agregar Variable</h1>
+  <h1
+    *ngIf="idVariable === 0; else editTemplate"
+    class="container-add-variable__title"
+  >
+    Agregar Variable
+  </h1>
+  <ng-template #editTemplate>
+    <h1 class="container-add-variable__title">Editar Variable</h1>
+  </ng-template>
   <div class="add-variable">
     <form
       class="add-variable__form"
