--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -32,7 +32,7 @@
 
                 <div class="list-reports__row" *ngFor="let element of reports">
                     <div class="list-reports__cell list-reports__cell--reports">
-                        {{ element.numero}}
+                        {{ element.nombre}}
                     </div>
                     <div class="list-reports__cell list-reports__cell--reports list-reports__cell--reportsmiddle">
                         {{ element.fechaCreacion | date: 'dd/MM/yyyy'}}
