--- a/src/app/modules/auth/containers/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/containers/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div id="img" >
-        <img class="container-img" src="../../../../../assets/images/logo-MDP.svg" alt="Logo Mensajeros de la Paz" >
+    <div id="img">
+        <img class="container-img" src="../../../../../assets/images/logo-MDP.svg" alt="Logo Mensajeros de la Paz">
     </div>
     <div class="container-form" *ngIf="!flag">
         <div class="container-h">
@@ -8,26 +8,25 @@
             <h3 class="subtitle">Ingresa tu email para <br> restaurar la contraseña</h3>
         </div>
         <div class="">
-            <form class="form">
+            <form [formGroup]="emailFormControl" class="form">
                 <p>Email</p>
-                <input type="email" class="input" matInput [formControl]="emailFormControl"
-                    [errorStateMatcher]="matcher" placeholder="Ej. pat@example.com">
+                <input class="input" type="email" id="user" placeholder="forexample@mdp.com"
+                    formControlName="mailTo" />
                 <div class="error">
-                    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                        Please enter a valid email address
-                    </mat-error>
                     <mat-error *ngIf="emailFormControl.hasError('required')">
                         Email is <strong>required</strong>
                     </mat-error>
                 </div>
             </form>
-            <button type="submit" [disabled]="!emailFormControl.valid" (click)="submit()">Enviar</button>
+            <button type="submit" 
+                (click)="submit(emailFormControl.value)">Enviar</button>
         </div>
     </div>
     <ng-container *ngIf="flag">
         <div class="container-post">
             <div class="post">
-                <h1>Te hemos enviado un correo a <br> <a href="https://mail.google.com/mail/{{emailFormControl.value}}" target="_blank">{{emailFormControl.value}}</a><br> para 
+                <h1>Te hemos enviado un correo a <br> <a href="https://mail.google.com/mail/{{emailFormControl.value.mailTo}}"
+                        target="_blank">{{emailFormControl.value.mailTo}}</a><br> para
                     restaurar tu contraseña. <br> Por favor revisa tu
                     email.</h1>
             </div>
