Feat: agrega funcio para obtener token y utiliza endpoint change password
ademas cambia nombre de control de segundo input a confirmPassword

--- a/src/app/modules/auth/containers/recover-password/recover-password.component.html
+++ b/src/app/modules/auth/containers/recover-password/recover-password.component.html
@@ -17,15 +17,15 @@
         </div>
         <div class="container-repite">
             <h2>Repite la contraseña</h2>
-            <input type="password" formControlName="cPassword" >
-            <div *ngIf="f.cPassword.invalid && f.cPassword.dirty" >
+            <input type="password" formControlName="confirmPassword" >
+            <div *ngIf="f.confirmPassword.invalid && f.confirmPassword.dirty" >
                 <mat-error *ngIf="formg.hasError('notSame') !=null" >
                     Las contraseñas no coinciden 
                 </mat-error>
             </div>
         </div>
 
-        <button (click)="confirm()" [disabled]="!formg.valid">Confirmar</button>
+        <button (click)="confirm(formg.value)" [disabled]="!formg.valid">Confirmar</button>
     </form>
 
 </div>
